llvm/test/CodeGen/AIE/aie2/schedule/negative_latencies/WAW.mir
# NOTE: Assertions have been autogenerated by utils/update_mir_test_checks.py
#
# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
#
# (c) Copyright 2023-2024 Advanced Micro Devices, Inc. or its affiliates
# RUN: llc -mtriple=aie2 -run-pass=postmisched --issue-limit=1 %s -o - | FileCheck %s

---
name:            write_E1_write_E7
alignment:       16
body:             |
  bb.0.entry:
    liveins: $p0
    ; CHECK-LABEL: name: write_E1_write_E7
    ; CHECK: liveins: $p0
    ; CHECK-NEXT: {{  $}}
    ; CHECK-NEXT: $r0 = MOVXM_lng_cg 0
    ; CHECK-NEXT: $r0 = LDA_dms_lda_idx_imm killed $p0, 4
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    $r0 = MOVXM_lng_cg 0
    $r0 = LDA_dms_lda_idx_imm $p0, 4
...

---
name:            write_E1_write_E7_multi
alignment:       16
body:             |
  bb.0.entry:
    liveins: $p0
    ; CHECK-LABEL: name: write_E1_write_E7_multi
    ; CHECK: liveins: $p0
    ; CHECK-NEXT: {{  $}}
    ; CHECK-NEXT: $r0 = MOVXM_lng_cg 0
    ; CHECK-NEXT: $r0 = LDA_dms_lda_idx_imm $p0, 4
    ; CHECK-NEXT: $r0 = LDA_dms_lda_idx_imm killed $p0, 4
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    $r0 = MOVXM_lng_cg 0
    $r0 = LDA_dms_lda_idx_imm $p0, 4
    $r0 = LDA_dms_lda_idx_imm $p0, 4
...

---
name:            write_E1_read_E1_write_E7
alignment:       16
body:             |
  bb.0.entry:
    liveins: $p0
    ; CHECK-LABEL: name: write_E1_read_E1_write_E7
    ; CHECK: liveins: $p0
    ; CHECK-NEXT: {{  $}}
    ; CHECK-NEXT: $r0 = MOVXM_lng_cg 0
    ; CHECK-NEXT: ST_dms_sts_idx_imm killed $r0, $p0, 20
    ; CHECK-NEXT: $r0 = LDA_dms_lda_idx_imm killed $p0, 4
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    ; CHECK-NEXT: NOP
    $r0 = MOVXM_lng_cg 0
    ST_dms_sts_idx_imm $r0, $p0, 20
    $r0 = LDA_dms_lda_idx_imm $p0, 4
...
